metadata-retriever/metadata/objects/Customer_Vehicle_Relationship__c.object
<CustomObject>
    <description>Stores information on Vehicle Relationship</description>
    <fields>
        <fullName>Add_Date__c</fullName>
        <label>Add Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Add_User__c</fullName>
        <label>Add User</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Offer_Others__c</fullName>
        <label>Additional Offer Others</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Offer__c</fullName>
        <label>Additional Offer</label>
        <picklist>
            <picklistValues>
                <fullName>1 year free servicing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 years free servicing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 years free servicing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 year extended warranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 years extended warranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed price service offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount off parts and labour</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <description>What factors were influential in your purchase decision?
(Please rank from 1-5, with 1 being most important and 5 less important)</description>
        <inlineHelpText>What factors were influential in your purchase decision?
(Please rank from 1-5, with 1 being most important and 5 less important)</inlineHelpText>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CP_Expiry_Date__c</fullName>
        <description>Indicates when the corporate sale program expires</description>
        <label>CP Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CP_Expiry_KMS__c</fullName>
        <description>Defines the threshold of the CP</description>
        <label>CP Expiry KMS</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Car_Model__c</fullName>
        <formula>Vehicle_ID__r.Car_Model__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Car Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Car_Relation__c</fullName>
        <inlineHelpText>Person&apos;s relationship to the vehicle</inlineHelpText>
        <label>Car Relation</label>
        <picklist>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lessee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Class_Summary__c</fullName>
        <description>Survey Class Summary</description>
        <label>Class Summary</label>
        <picklist>
            <picklistValues>
                <fullName>A-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLK-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLK-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Viano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLC-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart Fortwo coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart Fortwo cabrio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart Forfour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart Roadster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLS-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLS AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprinter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vito</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB 100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB 140</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All New A-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valente</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Considered_Make_1__c</fullName>
        <label>Considered Make 1</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALFA ROMEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASTON MARTIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRAL DENNING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENTLEY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CATERHAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CATERPILLAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHRYSLER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CITROEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAEWOO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAIHATSU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datsun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DENNIS EAGLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DODGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eunos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FERRARI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOTON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FREIGHTLINER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GREAT WALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HINO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOLDEN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Considered_Make_2__c</fullName>
        <label>Considered Make 2</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALFA ROMEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASTON MARTIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRAL DENNING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENTLEY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CATERHAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CATERPILLAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHRYSLER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CITROEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAEWOO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAIHATSU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datsun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DENNIS EAGLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DODGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eunos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FERRARI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOTON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FREIGHTLINER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GREAT WALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HINO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOLDEN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Considered_Model_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Considered Model 1</label>
        <referenceTo>Car_Model__c</referenceTo>
        <relationshipLabel>Customer Vehicle Relationship</relationshipLabel>
        <relationshipName>Customer_Vehicle_Relationship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Considered_Model_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Considered Model 2</label>
        <referenceTo>Car_Model__c</referenceTo>
        <relationshipLabel>Customer Vehicle Relationship (Considered Model 2)</relationshipLabel>
        <relationshipName>Customer_Vehicle_Relationship1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Corporate_Sale__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this car has been sold as a Corporate Sale</description>
        <label>Corporate Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>ID of related person</inlineHelpText>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Company, Person Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vehicle Relationship</relationshipLabel>
        <relationshipName>CustomerVehicleRelationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DealerNo__c</fullName>
        <formula>Dealer__r.SF_Dealer_ID__c</formula>
        <label>SF Dealer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dealer Vehicle Relationships</relationshipLabel>
        <relationshipName>DealerVehicleRelationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <description>Delivery Date</description>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Design__c</fullName>
        <inlineHelpText>What factors were influential in your purchase decision?
(Please rank from 1-5, with 1 being most important and 5 less important)</inlineHelpText>
        <label>Design</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Driver_Relationship__c</fullName>
        <label>Driver Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Daughter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse/Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Finance_Method__c</fullName>
        <label>Finance Method</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bankmecu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORPORATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE CAPITAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MACQUARIE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MERCEDES BENZ FINANCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes-Benz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ORIX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REGENT FINANCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WESTPAC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Finance_Offered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finance Offered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financier__c</fullName>
        <label>Financier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fleet_Category__c</fullName>
        <label>Fleet Category</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business - Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demonstrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demonstrator - Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demonstrator - MBAuP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diplomats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Govt Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Govt Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overseas Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner Operator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Producer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Local - F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Local - M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taxis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Govt State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not For Profit Org</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Fleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium / Small Fleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBC Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprinter Body Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fleet_End_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fleet End Customer</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You can only look up a Person Account.</errorMessage>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Person Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Vehicle Relationship (Fleet End Customer)</relationshipLabel>
        <relationshipName>Customer_Vehicle_Relationship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fleet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>indicating whether the company is a fllet customer</description>
        <label>Fleet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insurance_Offered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insurance Offered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insurance_Renewal_Date__c</fullName>
        <label>Insurance Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurer__c</fullName>
        <label>Insurer</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDCL_Vehicle_Relationship_Id__c</fullName>
        <externalId>true</externalId>
        <label>LDCL Vehicle Relationship Id</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_Update_Changed_By__c</fullName>
        <label>Last Update Changed By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Updated__c</fullName>
        <label>Last Updated</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Luxury__c</fullName>
        <inlineHelpText>What factors were influential in your purchase decision?
(Please rank from 1-5, with 1 being most important and 5 less important)</inlineHelpText>
        <label>Luxury</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Magazine__c</fullName>
        <description>What factors were influential in your purchase decision?
(Please rank from 1-5, with 1 being most important and 5 less important)</description>
        <inlineHelpText>What factors were influential in your purchase decision?
(Please rank from 1-5, with 1 being most important and 5 less important)</inlineHelpText>
        <label>Magazine</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mail__c</fullName>
        <description>What factors were influential in your purchase decision?
(Please rank from 1-5, with 1 being most important and 5 less important)</description>
        <inlineHelpText>What factors were influential in your purchase decision?
(Please rank from 1-5, with 1 being most important and 5 less important)</inlineHelpText>
        <label>Mail</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Main_Driver__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Survey - MainDriver</description>
        <label>Main Driver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Newspaper__c</fullName>
        <description>What factors were influential in your purchase decision?
(Please rank from 1-5, with 1 being most important and 5 less important)</description>
        <inlineHelpText>What factors were influential in your purchase decision?
(Please rank from 1-5, with 1 being most important and 5 less important)</inlineHelpText>
        <label>Newspaper</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Odometer_Reading__c</fullName>
        <description>Odometer Reading at sale</description>
        <label>Odometer Reading</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Driver__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Survey - Other Driver</description>
        <label>Other Driver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Performance__c</fullName>
        <description>Survey Information
What factors were influential in your purchase decision?
(Please rank from 1-5, with 1 being most important and 5 less important)</description>
        <inlineHelpText>What factors were influential in your purchase decision?
(Please rank from 1-5, with 1 being most important and 5 less important)</inlineHelpText>
        <label>Performance</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pre_Owned_Warranty_Expiry__c</fullName>
        <label>Pre Owned Warranty Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Make__c</fullName>
        <label>Previous Make</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALFA ROMEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASTON MARTIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRAL DENNING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENTLEY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CATERHAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CATERPILLAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHRYSLER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CITROEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAEWOO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAIHATSU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datsun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DENNIS EAGLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DODGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eunos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FERRARI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOTON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FREIGHTLINER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GREAT WALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HINO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOLDEN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Model</label>
        <referenceTo>Car_Model__c</referenceTo>
        <relationshipLabel>Customer Vehicle Relationship (Previous Model)</relationshipLabel>
        <relationshipName>Customer_Vehicle_Relationship2</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>